--- a/ShopApp/Views/Shop/List.cshtml
+++ b/ShopApp/Views/Shop/List.cshtml
@@ -19,6 +19,32 @@
                 </div>
             }
         </div>
+        <div class="row">
+            <div class="col">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+
+                        @for (int i = 0; i < Model.PageInfo.TotalPages(); i++)
+                        {
+                            if (string.IsNullOrEmpty(Model.PageInfo.CurrentCategory))
+                            {
+                                <li class="page-item @(Model.PageInfo.CurrentPage==(i+1)?"active":"")">
+                                    <a class="page-link" href="/products?page=@(i+1)">@(i + 1)</a>
+                                </li>
+                                
+                            }else
+                            {
+                                <li class="page-item @(Model.PageInfo.CurrentPage==(i+1)?"active":"")">
+                                    <a class="page-link" href="/products/@Model.PageInfo.CurrentCategory?page=@(i+1)">@(i + 1)</a>
+                                </li>
+                            }
+                        }
+
+                        
+                        
+                </nav>
+            </div>
+        </div>
     </div>
 </div>
 
