--- a/ShopApp/Views/Shop/List.cshtml
+++ b/ShopApp/Views/Shop/List.cshtml
@@ -8,6 +8,7 @@
 
 <div class="row">
     <div class="col-md-3">
+        @await Html.PartialAsync("_search")
         @await Component.InvokeAsync("Categories")
     </div>
     <div class="col-md-9">
