--- a/ShopApp/Views/Admin/ProductList.cshtml
+++ b/ShopApp/Views/Admin/ProductList.cshtml
@@ -31,6 +31,22 @@
                             <td>@item.Name</td>
                             <td>@item.Price</td>
                             <td>
+                                @if (item.IsHome)
+                                {
+                                    <i class="fas fa-check-circle"></i>
+                                }else{
+                                    <i class="fas fa-times-circle"></i>
+                                }
+                            </td>
+                            <td>
+                                @if (item.IsApproved)
+                                {
+                                    <i class="fas fa-check-circle"></i>
+                                }else{
+                                    <i class="fas fa-times-circle"></i>
+                                }
+                            </td>
+                            <td>
                                 <a href="/admin/products/@item.ProductId" class="btn btn-primary btn-sm mr-2">Edit</a>
                                 <a href="#" class="btn btn-danger btn-sm">Delete</a>
                             </td>
