--- a/ShopApp/Views/Admin/ProductEdit.cshtml
+++ b/ShopApp/Views/Admin/ProductEdit.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <form asp-controller="Admin" asp-action="Edit" method="POST">
+        <form asp-controller="Admin" asp-action="ProductEdit" method="POST">
             <input type="hidden" name="ProductId" value="@Model.ProductId"/>
             <div class="form-group row">
                 <label asp-for="Name" class="col-sm-2 col-form-label"></label>
