--- a/ShopApp/Views/Admin/ProductList.cshtml
+++ b/ShopApp/Views/Admin/ProductList.cshtml
@@ -8,9 +8,10 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1>Admin Products</h1>
+        <h1 class="h3">Admin Products</h1>
         <hr />
-        <table class="table table-bordered">
+        <a href="/admin/products/create" class="btn btn-primary btn-sm">Add Product</a>
+        <table class="table table-bordered mt-3">
             <thead>
                 <tr>
                     <td style="width:30px">Id</td>
