--- a/ShopApp/Views/Shared/_navbar.cshtml
+++ b/ShopApp/Views/Shared/_navbar.cshtml
@@ -11,11 +11,12 @@
             <li class="nav-item">
                 <a href="" class="nav-link">Orders</a>
             </li>
-              <li class="nav-item">
-                <a asp-controller="admin" asp-action="createproduct" class="nav-link">Add Product</a>
-              </li>
+              
             <li class="nav-item">
                 <a href="/admin/products" class="nav-link">Admin Products</a>
+            </li>
+            <li class="nav-item">
+                <a href="/admin/categories" class="nav-link">Admin Categories</a>
             </li>
           </ul>
 
