--- a/ShopApp/Views/Admin/CategoryList.cshtml
+++ b/ShopApp/Views/Admin/CategoryList.cshtml
@@ -6,7 +6,7 @@
 
 @model CategoryListViewModel
 
-<<div class="row">
+<div class="row">
     <div class="col-md-12">
         <h1 class="h3">Admin Categories</h1>
         <hr />
