--- a/ShopApp/Views/Admin/ProductCreate.cshtml
+++ b/ShopApp/Views/Admin/ProductCreate.cshtml
@@ -3,7 +3,6 @@
     ViewData["Title"] = "CreateProduct";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 @model ProductModel
 
 <h1 class="h3">Create Product</h1>
@@ -11,35 +10,41 @@
 
 <div class="row">
     <div class="col-md-8">
-        <form asp-controller="Admin" asp-action="CreateProduct" method="POST">
+        <form asp-controller="Admin" asp-action="ProductCreate" method="POST">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group row">
                 <label asp-for="Name" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Name">
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="Url" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Url">
+                    <span asp-validation-for="Url" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="Description" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <textarea class="form-control" asp-for="Description"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="Price" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Price">
+                    <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="ImageUrl" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="ImageUrl">
+                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
@@ -50,5 +55,12 @@
         </form>
     </div>
 </div>
+
+@*Validation için*@
+@section Scripts
+    {
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
 
 
