--- a/ShopApp/Views/Admin/ProductEdit.cshtml
+++ b/ShopApp/Views/Admin/ProductEdit.cshtml
@@ -7,56 +7,88 @@
 
 <h1 class="h3">Edit Product</h1>
 <hr>
+
 <form asp-controller="Admin" asp-action="ProductEdit" method="POST">
-<div class="row">
-    <div class="col-md-4">
-        
-            <input type="hidden" name="ProductId" value="@Model.ProductId"/>
+    <div class="row">
+        <div class="col-md-12">
+            <div asp-validation-summary="All" class="text-danger"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+
+            <input type="hidden" name="ProductId" value="@Model.ProductId">
             <div class="form-group row">
                 <label asp-for="Name" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Name">
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="Url" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Url">
+                    <span asp-validation-for="Url" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="Description" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <textarea class="form-control" asp-for="Description"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="Price" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Price">
+                    <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="ImageUrl" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="ImageUrl">
+                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-sm-10 offset-sm-2">
-                    <button type="submit" class="btn btn-primary">Edit Product</button>
+                    <button type="submit" class="btn btn-primary">Save Product</button>
                 </div>
             </div>
-        
+
+        </div>
+        <div class="col-md-4">
+            
+            @***validation** için bu sayfada kullandığımız category bilgilerini burda hidden olarak vermemiz gerekiyor ve form un içinde olamlı*@
+            @for (int i = 0; i < Model.SelectedCategories.Count; i++)
+            {
+                <input type="hidden" name="SelectedCategories[@i].CategoryId" value="@Model.SelectedCategories[@i].CategoryId">
+                <input type="hidden" name="SelectedCategories[@i].Name" value="@Model.SelectedCategories[@i].Name">
+            }
+            @***validation son***@
+            @foreach (var item in (List<Category>)ViewBag.Categories)
+            {
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox"
+                       class="custom-control-input"
+                       name="categoryIds"
+                       value="@item.CategoryId"
+                       id="category_@(item.CategoryId)"
+                       @(Model.SelectedCategories.Any(i=>i.CategoryId==item.CategoryId)?"checked":"")>
+                    <label class="custom-control-label" for="category_@(item.CategoryId)">@item.Name</label>
+                </div>
+            }
+        </div>
     </div>
-    <div class="col-md-8">
-        @foreach (var item in (List<Category>)ViewBag.Categories)
-        {
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="category_@(item.CategoryId)" name="categoryIds" value="@item.CategoryId" @(Model.SelectedCategories.Any(i=>i.CategoryId==item.CategoryId)?"checked":"")>
-                <label for="category_@(item.CategoryId)" class="form-check-label">@item.Name</label>
-            </div>
-        }
-    </div>
-</div>
+
 </form>
+
+@*Validation için*@
+@section Scripts
+    {
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
