--- a/ShopApp/Views/Admin/RoleList.cshtml
+++ b/ShopApp/Views/Admin/RoleList.cshtml
@@ -28,7 +28,7 @@
                             <td>@item.Name</td>
                             
                             <td>
-                                <a href="/admin/role/edit/@item.Id" class="btn btn-primary btn-sm mr-2">Edit</a>
+                                <a href="/admin/role/@item.Id" class="btn btn-primary btn-sm mr-2">Edit</a>
 
                                 <form action="/admin/role/delete" method="post" style="display:inline;">
                                     <input type="hidden" name="RoleId" value="@item.Id">
