--- a/ShopApp/Views/Shared/_Layout.cshtml
+++ b/ShopApp/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" crossorigin="anonymous">
+    @RenderSection("Css",false)
     <link rel="stylesheet" href="~/css/style.css">
     <title>Document</title>
 </head>
